# tempest

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: architecture.mdx  docs.json  index.mdx  installation.mdx  keyboard-shortcuts.mdx  package.json  quickstart.mdx  tempest.css
docs/agents/: overview.mdx  supported.mdx
docs/components/: dialogs.mdx  overview.mdx  panes.mdx  sidebar.mdx  workspace-view.mdx
docs/contributing/: feature-request.mdx  issues.mdx  overview.mdx
docs/git/: overview.mdx  push-pr.mdx  staging-commits.mdx  worktrees.mdx
docs/internals/: state.mdx  tauri-commands.mdx
docs/terminal/: overview.mdx
docs/themes/: custom-themes.mdx  overview.mdx  variables.mdx
docs/token-intelligence/: mcp.mdx  overview.mdx
docs/workspaces/: creating.mdx  overview.mdx
scripts/: bundle-atlas.mjs  collect-artifacts.mjs  install-atlas.mjs  test-atlas-index.mjs
src/: App.css  App.tsx  fonts.css  main.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/dbiso/: Cargo.toml
src-tauri/crates/dbiso/src/: db.rs  docker.rs  lib.rs  types.rs
src-tauri/crates/hephaestus/: Cargo.toml
src-tauri/crates/hephaestus-driver/: Cargo.toml  README.md  build.rs
src-tauri/crates/hephaestus-driver/.cargo/: config.toml
src-tauri/crates/hephaestus-driver/src/: lib.rs
src-tauri/crates/hephaestus/src/: error.rs  lib.rs  proxy.rs  spec.rs
src-tauri/crates/hephaestus/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/: Mark.tsx  TempestLogo.tsx
src/components/: AgentTabs.tsx  AtlasIndexModal.css  AtlasIndexModal.tsx  AtlasIndexToast.css  AtlasIndexToast.tsx  BranchSessionMenu.css  BranchSessionMenu.tsx  BroadcastDialog.css  ChatPane.css  ChatPane.tsx  CodeMirrorPane.css  CodeMirrorPane.tsx  CommandPalette.css  CommandPalette.tsx  DiffPane.css  DiffPane.tsx  IconCapsule.tsx  KnowledgeBasePage.css  KnowledgeBasePage.tsx  NewProjectModal.css  NewProjectModal.tsx  NewSessionMenu.css  NewSessionMenu.tsx  NexusPage.css  NexusPage.tsx  OverviewPage.css  OverviewPage.tsx  PrDialog.css  PrDialog.tsx  PreviewPane.css  PreviewPane.tsx  ProgressiveBlur.tsx  ProjectSettingsPanel.css  ProjectSettingsPanel.tsx  ProjectSwitcherModal.css  ProjectSwitcherModal.tsx  RightSidebar.css  RightSidebar.tsx  SessionBadges.tsx  SettingsPanel.css  (+13 more)
src/components/ChatPane/: ProposalCard.tsx  ToolCallCard.tsx
src/lib/: agentArgs.ts  chat.ts  chatHistory.ts  chatModels.ts  chatTools.ts  db.ts  format.ts  git.ts  knowledgeGraph.ts  knowledgeGraphRender.ts  notify.ts  paneLayout.ts  runtimeState.ts  worktree.ts
src/store/: agentAvailability.ts  appSettings.ts  attribution.ts  keybindings.ts  openProjects.ts  recents.ts  reviewComments.ts  sessionManager.ts  sessions.ts  tabs.ts  workState.ts
src/themes/: ThemeContext.tsx  applyTheme.ts  types.ts
src/types/: chat.ts  git.ts  knowledgeGraph.ts  workspace.ts
src/workers/: graphLayout.worker.ts
web/: .gitignore  package.json
web/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
web/components/: cookie-banner.tsx  download-content.tsx  faq-section.tsx  hero-buttons.tsx  providers-row.tsx
web/lib/: format-date.ts  mdx.ts
web/public/: llms.txt
web/scripts/: generate-blog-index.js
(+86 files in other folders)
