[package]
name = "hephaestus"
version = "0.1.0"
edition = "2021"
description = "Platform-native process isolation SDK"
publish = false

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Time",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
] }
